fix: package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mongodb-healthchecker",
+  "name": "@mia-platform-internal/mongodb-healthchecker",
   "version": "0.1.0",
   "description": "A utility library to perform mongodb healthchecks",
   "main": "index.js",
