--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "coverage": "npm run unit -- --coverage",
     "lint": "eslint . --ignore-path=.gitignore",
-    "test": "npm run lint && npm run unit && npm run checkonly",
+    "test": "npm run lint && npm run unit",
     "unit": "jest",
     "update-version": "./scripts/update-version.sh ${npm_package_version} && git add CHANGELOG.md Dockerfile",
     "version": "npm run update-version"
