--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,13 @@
 {
+  "extends": [
+    "@mia-platform/eslint-config-mia"
+  ],
+  "plugins": ["jest"],
   "parserOptions": {
-    "ecmaVersion": 2017
+    "ecmaVersion": 11
   },
   "env": {
-    "es6": true
+    "es6": true,
+    "jest/globals": true
   }
 }
