--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,3 +5,20 @@ include:
   - project: "platform/pipelines-templates"
     file: "/build/node/template-library-node-npm-test-latest.yml"
     ref: "master"
+
+
+test:
+  variables:
+    MONGO_HOST_CI: 'mongo:27017'
+
+  services:
+    - name: mongo:4.2
+      alias: mongo
+
+test-latest:
+  variables:
+    MONGO_HOST_CI: 'mongo:27017'
+
+  services:
+    - name: mongo
+      alias: mongo
