update: license to Apache 2.0

--- a/package.json
+++ b/package.json
@@ -28,5 +28,5 @@
     "snazzy": "^9.0.0"
   },
   "author": "core@mia-platform.eu",
-  "license": "SEE LICENSE IN LICENSE"
+  "license": "Apache-2.0"
 }
