--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -42,3 +42,10 @@ jobs:
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
 
+    - name: Publish Tag
+      uses: JS-DevTools/npm-publish@v1
+      if: ${{ startsWith(github.ref, 'refs/tags/') }}
+      with:
+        package: './package.json'
+        access: 'public'
+        token: ${{ secrets.NPM_TOKEN }}
