--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -10,10 +10,22 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
-
+  publish:
     runs-on: ubuntu-latest
+    if: ${{ startsWith(github.ref, 'refs/tags/') }}
+    steps:
+      - uses: actions/checkout@v1
+      - uses: actions/setup-node@v1
+        with:
+          node-version: 14.x
+      - run: npm install
+      - run: npm test
+      - uses: JS-DevTools/npm-publish@v1
+        with:
+          token: ${{ secrets.NPM_TOKEN }}
 
+  build:
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
@@ -41,11 +53,3 @@ jobs:
       uses: coverallsapp/github-action@master
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
-
-    - name: Publish Tag
-      uses: JS-DevTools/npm-publish@v1
-      if: ${{ startsWith(github.ref, 'refs/tags/') }}
-      with:
-        package: './package.json'
-        access: 'public'
-        token: ${{ secrets.NPM_TOKEN }}
