--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -11,31 +11,6 @@ on:
     branches: [ main ]
 
 jobs:
-  publish:
-    runs-on: ubuntu-latest
-    if: ${{ startsWith(github.ref, 'refs/tags/') }}
-    strategy:
-      matrix:
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-        node-version: [14.x]
-        mongodb-version: ['4.4']
-    steps:
-      - uses: actions/checkout@v1
-
-      - name: Start MongoDB
-        uses: supercharge/mongodb-github-action@1.6.0
-        with:
-          mongodb-version: ${{ matrix.mongodb-version }}
-
-      - uses: actions/setup-node@v1
-        with:
-          node-version: 14.x
-      - run: npm install
-      - run: npm test
-      - uses: JS-DevTools/npm-publish@v1
-        with:
-          token: ${{ secrets.NPM_TOKEN }}
-
   build:
     runs-on: ubuntu-latest
     strategy:
@@ -65,3 +40,10 @@ jobs:
       uses: coverallsapp/github-action@master
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
+        
+    - uses: JS-DevTools/npm-publish@v1
+      if: ${{ startsWith(github.ref, 'refs/tags/') }}
+      with:
+        package: './package.json'
+        access: 'public'
+        token: ${{ secrets.NPM_TOKEN }}
