--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -47,3 +47,25 @@ jobs:
         package: './package.json'
         access: 'public'
         token: ${{ secrets.NPM_TOKEN }}
+
+  publish:
+    runs-on: ubuntu-latest
+    if: ${{ startsWith(github.ref, 'refs/tags/') }}
+
+    steps:
+      - uses: actions/checkout@v1
+
+      - name: Start MongoDB
+        uses: supercharge/mongodb-github-action@1.6.0
+        with:
+          mongodb-version: 4.4
+
+      - uses: actions/setup-node@v1
+        with:
+          node-version: 14.x
+      - run: npm install
+      - run: npm test
+      - uses: JS-DevTools/npm-publish@v1
+        with:
+          token: ${{ secrets.NPM_TOKEN }}
+
