--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@git.tools.mia-platform.eu:platform/libraries/mongodb-healthchecker.git"
+    "url": "git@github.com:mia-platform/mongodb-healthchecker.git"
   },
   "keywords": [
     "MongoDB",
