build: add missing repository field in package.json for npm authentication

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -58,8 +58,9 @@ jobs:
 
       - uses: actions/setup-node@a0853c24544627f65ddf259abe73b1d18a591444 # v5.0.0
         with:
-          node-version: 24
+          node-version: '24.x'
           check-latest: true
+          registry-url: 'https://registry.npmjs.org'
       - run: npm ci
       - run: npm test
       - run: npm publish --access public
